--- a/sails-bin/static/404.html
+++ b/sails-bin/static/404.html
@@ -13,10 +13,8 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="px-4 pt-5 my-5 text-center"><span class=
-"display-1 d-block">404</span>
-<div class="mb-4 lead">Oops! You have fallen into the
-wildness.</div>
+<div class="px-4 pt-5 my-5 text-center"><span class="display-1 d-block">404</span>
+<div class="mb-4 lead">Oops! You have fallen into the wildness.</div>
 <a href="/" class="btn btn-primary btn-lg px-4 me-sm-3">Back to
 Home</a></div>
 </body>
