switch to askama; deployable

--- a/sails-bin/static/500.html
+++ b/sails-bin/static/500.html
@@ -7,7 +7,7 @@
 <meta name="description" content="An online second-hand book market">
 <meta name="author" content="Harry Ying">
 <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap core CSS -->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="px-4 pt-5 my-5 text-center"><span class="display-1 d-block">500</span>
