no more markets and books

--- a/sails-bin/static/404.html
+++ b/sails-bin/static/404.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>404 FLibrary</title>
 <meta name="description" content=
-"An online second-hand book market">
+"An online learning store and community">
 <meta name="author" content="Harry Ying">
 <meta name="viewport" content=
 "width=device-width, initial-scale=1"><!-- Bootstrap core CSS -->
